--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,16 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.hide-scrollbar {
+  /* Internet Explorer */
+  -ms-overflow-style: none;
+
+  /* Firefox */
+  scrollbar-width: none;
+}
+
+/* Chromium-based browsers */
+.hide-scrollbar::--webkit-scrollbar {
+  display: none;
+}
