--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,15 @@ body {
 .hide-scrollbar::--webkit-scrollbar {
   display: none;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  @apply rounded-sm bg-neutral-300 shadow-sm;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  @apply bg-neutral-400;
+}
